# cpp-test-generator

./: CMakeLists.txt  input.h
input/: input.cpp
prompts/: generate_tests.yaml
scripts/: test_generator.py
tests/: input_test.cpp  test_main.cpp
